--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "admin-panel",
-  "version": "0.1.0",
+  "name": "dash",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
-    "react-scripts": "^3.0.1",
+    "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
