--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "easybase-react": "^2.2.13",
     "firebase": "^9.15.0",
     "iconsax-react": "^0.0.8",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
