--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "firebase": "^9.15.0",
     "iconsax-react": "^0.0.8",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "react-text-transition": "^3.1.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
