--- a/src/backend/configuration/appConfig.json
+++ b/src/backend/configuration/appConfig.json
@@ -3,7 +3,13 @@
   "dbHost": "localhost",
   "port":"27017",
   "dbName":"adminPanel",
-  "originHost":"http://webapp:3000",
+  "corsPolicy": {
+    "incomingTraffic": "allowedOnly",
+    "allowedOrigins": [
+      "http://webapp:3000",
+      "http://sumit:3000"
+    ]
+  },
   "logs" : {
     "path": "logs/%DATE%.log",
     "mode":"info",
@@ -11,3 +17,4 @@
     "retantionPeriod": "14d"
   }
 }
+
