--- a/src/backend/configuration/appConfig.json
+++ b/src/backend/configuration/appConfig.json
@@ -3,6 +3,7 @@
   "dbHost": "localhost",
   "port":"27017",
   "dbName":"adminPanel",
+  "version": "0.0.5",
   "corsPolicy": {
     "incomingTraffic": "allowedOnly",
     "allowedOrigins": [
