created settings page

--- a/public/config.json
+++ b/public/config.json
@@ -2,7 +2,7 @@
     "sessionExpiredType" : "Hrs",
     "sessionExpiredTime": 5,
     "host": "http://webapp:3001",
-    "defaultPage": "/Inventory",
+    "defaultPage": "/Settings",
     "maxImageUpload": 4,
     "version":"1.0.2",
     "roles" : {
